/*
 * $Id: ChangeLog,v 1.5149 2006/09/15 15:07:01 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-09-16 18:10 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\memoedit.prg
    ! fixed K_ESC behaviour that wasn't exit while buffer is not changed.  
    ! fixed to trap nextkey when a key is inserted into buffer by setkey.

  * source\rtl\teditor.prg
    ! fixed bug related to ME_TOGGLESCROLL behaviour. Bug reported by
      Ed. Horbino.
    ! fixed bug related to selection text and paste behaviour.
    + added support to K_SH_END and K_SH_HOME selection. keys. 
    + added support to K_CTRL_RET key. 
      * Thanks to Lorenzo Fiorini by fixes and adds.

2006-09-15 11:06 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/classes.c
    * __CLASSNAME() reverted to return class name only based on numeric handle argument or "" for any invalid argument
    * __OBJGETCLSNAME() revised to not treat numerics as handles but rather always return pure class name of any type argument.

  * source/rtl/profiler.prg
    * Minor optimization using __ClsCntClasses()

2006-09-14 23:23 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  * gd\MAKE_B32.BAT
    *  fixed so if you use envvar BCDIR you don't have to also create
       a BCCDIR to be able to build

  * contrib/rdd_ads/ads1.c
    * fixed bug where the Found flag set by AdsSeek() was incorrect.
      This code is activated only when ADS cannot serve a filter itself
      and filtering is done at the app level.  If the first "hit" from a
      seek landed on a bad record, SKIPFILTER would move to the appropriate
      following record but the Found() flag was wrong.
      For those who might want to test carefully, here's my detailed note:


      If a filter is set that is not valid for ADS, we need to skip